# sky_over_kharkov

./: .gitignore  CMakeLists.txt  localization.h  main.c  translations.ini
